platform/gitops/components/platform/argocd/config/base/service-argocd-ui-extensions.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-ui-extensions
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-ui-extensions
    app.kubernetes.io/part-of: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-ui-extensions
  ports:
    - name: http
      port: 8080
      targetPort: http
