platform/gitops/components/platform/argocd/config/base/ciliumnetworkpolicy-core-kube-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-core-allow-kube-apiserver
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argo-cd
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
